apps/lazyaiden-tui/tests/snapshots/render__brewer_picker.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: shot(&t)
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│ No profiles yet: n new, i import, P pu ││Nothing selected.                                                 │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└─────────────────────────────┌ Choose a brewer ───────────────────────────────┐                             │
┌ 2 Schedules ────────────────│  Kitchen (b1)                                  │                             │
│                             │  Office (b2)                                   │                             │
│                             └────────────────────────────────────────────────┘                             │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│  Kitchen (b1)                          ││                                                                  │
│  Office (b2)                           ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
choose a brewer to continue                                                                            offline
