apps/lazyaiden-tui/tests/snapshots/render__details_modified.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: text
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│! [C] Gone                              ││Modified                                                          │
│✓ [C] In Sync                           ││modified: local differs from the brewer                           │
│+     Local Only                        ││                                                                  │
│~ [C] Modified                          ││file    modified                                                  │
│↓ [C] Remote Only                       ││remote  p3  (created by you)                                      │
│                                        ││                                                                  │
│                                        ││Ratio         1:17                                                │
│                                        ││Bloom         on · 2× · 30s · 96°C                                │
│                                        ││Single-serve  on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││Batch         on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││                                                                  │
│                                        ││Differences                                                       │
└────────────────────────────────────────┘│ratio: 17.0 (local)  16.0 (brewer)                                │
┌ 2 Schedules ───────────────────────────┐│                                                                  │
│● 07:30 weekdays In Sync                ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
n new  e edit  p push  P pull  d delete  s share  f Fellow  ? help  q quit                          Aiden (b1)
