apps/lazyaiden-tui/tests/snapshots/render__device_focus.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: shot(&t)
---
┌ 1 Profiles ────────────────────────────┐┌ Brewer ──────────────────────────────────────────────────────────┐
│! [C] Gone                              ││id      b1                                                        │
│✓ [C] In Sync                           ││name    Aiden                                                     │
│+     Local Only                        ││active  yes                                                       │
│~ [C] Modified                          ││                                                                  │
│↓ [C] Remote Only                       ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 2 Schedules ───────────────────────────┐│                                                                  │
│● 07:30 weekdays In Sync                ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
Enter choose brewer  r refresh  Tab panel  ? help  q quit                                           Aiden (b1)
