apps/lazyaiden-tui/tests/snapshots/render__offline.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: text
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│·     Morning V60                       ││Morning V60                                                       │
│                                        ││brewer state unknown                                              │
│                                        ││                                                                  │
│                                        ││file    local                                                     │
│                                        ││                                                                  │
│                                        ││Ratio         1:16                                                │
│                                        ││Bloom         on · 2× · 35s · 96°C                                │
│                                        ││Single-serve  on · 3 pulses · every 20s · 96, 95.5, 95            │
│                                        ││Batch         on · 3 pulses · every 25s · 96, 95.5, 95            │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 2 Schedules ───────────────────────────┐│                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
authentication failed: not logged in: run `lazyaiden-cli login` or set FELLOW_EMAIL and FELLOW_PASSWOR offline
