apps/lazyaiden-tui/tests/snapshots/render__populated.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: shot(&t)
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│! [C] Gone                              ││Gone                                                              │
│✓ [C] In Sync                           ││linked, but missing on the brewer                                 │
│+     Local Only                        ││                                                                  │
│~ [C] Modified                          ││file    gone                                                      │
│↓ [C] Remote Only                       ││remote  p4  (created by you)                                      │
│                                        ││                                                                  │
│                                        ││Ratio         1:16                                                │
│                                        ││Bloom         on · 2× · 30s · 96°C                                │
│                                        ││Single-serve  on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││Batch         on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 2 Schedules ───────────────────────────┐│                                                                  │
│● 07:30 weekdays In Sync                ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
n new  e edit  p push  P pull  d delete  s share  f Fellow  ? help  q quit                          Aiden (b1)
