apps/lazyaiden-tui/tests/snapshots/render__profile_form_errors.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: text
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│+     Form Demo                         ││Form Demo                                                         │
│                                        ││local only: not on the brewer yet                                 │
│                                        ││                                                                  │
│                                        ││file    form-demo                                                 │
│                                        ││                                                                  │
│      ┌ Edit form-demo ──────────────────────────────────────────────────────────────────────────────┐      │
│      │Title                     Form Demo                                                           │      │
│      │Ratio (1:x)               99                                                                  │      │
│      │Bloom                     [x] on                                                              │      │
│      │Bloom ratio               2                                                                   │      │
│      │Bloom duration (s)        abc▏  ✗ must be a whole number                                      │      │
│      │Bloom temp (°C)           96                                                                  │      │
└──────│Single-serve pulses       [x] on                                                              │      │
┌ 2 Sch│  count                   3                                                                   │      │
│      │  interval (s)            20                                                                  │      │
│      │  temps (°C, comma list)  96, 96, 96                                                          │      │
│      │Batch pulses              [x] on                                                              │      │
│      │  count                   3                                                                   │      │
│      │  interval (s)            20                                                                  │      │
│      │  temps (°C, comma list)  96, 96, 96                                                          │      │
│      │                                                                                              │      │
└──────│1 problem(s) — fix them to save                                                               │      │
┌ 3 Dev└──────────────────────────────────────────────────────────────────────────────────────────────┘      │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
Tab/↓ next  ↑ prev  Space toggle  Ctrl-S save  Esc cancel                                           Aiden (b1)
