apps/lazyaiden-tui/tests/snapshots/render__profile_form_valid.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: shot(&t)
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│+     Form OK                           ││Form OK                                                           │
│                                        ││local only: not on the brewer yet                                 │
│                                        ││                                                                  │
│                                        ││file    form-ok                                                   │
│                                        ││                                                                  │
│      ┌ Edit form-ok ────────────────────────────────────────────────────────────────────────────────┐      │
│      │Title                     Form OK▏                                                            │      │
│      │Ratio (1:x)               16                                                                  │      │
│      │Bloom                     [x] on                                                              │      │
│      │Bloom ratio               2                                                                   │      │
│      │Bloom duration (s)        30                                                                  │      │
│      │Bloom temp (°C)           96                                                                  │      │
└──────│Single-serve pulses       [x] on                                                              │      │
┌ 2 Sch│  count                   3                                                                   │      │
│      │  interval (s)            20                                                                  │      │
│      │  temps (°C, comma list)  96, 96, 96                                                          │      │
│      │Batch pulses              [x] on                                                              │      │
│      │  count                   3                                                                   │      │
│      │  interval (s)            20                                                                  │      │
│      │  temps (°C, comma list)  96, 96, 96                                                          │      │
│      │                                                                                              │      │
└──────│valid — Ctrl-S to save                                                                        │      │
┌ 3 Dev└──────────────────────────────────────────────────────────────────────────────────────────────┘      │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
Tab/↓ next  ↑ prev  Space toggle  Ctrl-S save  Esc cancel                                           Aiden (b1)
