apps/lazyaiden-tui/tests/snapshots/render__prompt.snap
---
source: apps/lazyaiden-tui/tests/render.rs
expression: shot(&t)
---
┌ 1 Profiles ────────────────────────────┐┌ Details ─────────────────────────────────────────────────────────┐
│! [C] Gone                              ││Gone                                                              │
│✓ [C] In Sync                           ││linked, but missing on the brewer                                 │
│+     Local Only                        ││                                                                  │
│~ [C] Modified                          ││file    gone                                                      │
│↓ [C] Remote Only                       ││remote  p4  (created by you)                                      │
│                                        ││                                                                  │
│                                        ││Ratio         1:16                                                │
│                                        ││Bloom         on · 2× · 30s · 96°C                                │
│                                        ││Single-serve  on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││Batch         on · 3 pulses · every 20s · 96, 96, 96              │
│                                        ││                                                                  │
│                                        ││                                                                  │
└───────────────────┌ Title of the new profile ──────────────────────────────────────────┐                   │
┌ 2 Schedules ──────│Nameless▏                                                           │                   │
│● 07:30 weekdays In└────────────────────────────────────────────────────────────────────┘                   │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘│                                                                  │
┌ 3 Device ──────────────────────────────┐│                                                                  │
│▸ Aiden (b1)                            ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
Enter confirm  Esc cancel                                                                           Aiden (b1)
